--- a/package.xml
+++ b/package.xml
@@ -19,6 +19,7 @@
   <build_depend>tf2</build_depend>
   <build_depend>yaml-cpp</build_depend>
   <build_depend>resource-retriever</build_depend>
+  <build_depend>multimap_server_msgs</build_depend>
 
   <run_depend>bullet</run_depend>
   <run_depend>nav_msgs</run_depend>
