--- a/maps/floor_0/localization.yaml
+++ b/maps/floor_0/localization.yaml
@@ -1,6 +1,6 @@
-image: routes_floor_0.pgm
+image: localization.png
 resolution: 0.050000
-origin: [-50.000000, -50.000000, 0.000000]
+origin: [-6.425, -6.425, 0.0]
 negate: 0
 occupied_thresh: 0.65
 free_thresh: 0.196
