--- a/config/example_environment_2.yaml
+++ b/config/example_environment_2.yaml
@@ -2,11 +2,11 @@ rooftop:
   global_frame: rooftop_map
   maps_package: multimap_server
   maps:
-    localization: maps/floor_0/localization.yaml
-    routes: maps/floor_0/routes.yaml
+    localization: maps/rooftop/localization.yaml
+    routes: maps/rooftop/routes.yaml
 basement:
   global_frame: basement_map
   maps_package: multimap_server
   maps:
-    localization: maps/floor_1/localization.yaml
-    routes: maps/floor_1/routes.yaml
+    localization: maps/basement/localization.yaml
+    routes: maps/basement/routes.yaml
