--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -57,16 +57,16 @@ target_link_libraries(multimap_server
     ${catkin_LIBRARIES}
 )
 
-add_executable(online_map_server src/online_map_saver.cpp)
-add_dependencies(online_map_server ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
-target_link_libraries(online_map_server
+add_executable(online_map_saver src/online_map_saver.cpp)
+add_dependencies(online_map_saver ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
+target_link_libraries(online_map_saver
     ${YAMLCPP_LIBRARIES}
     ${catkin_LIBRARIES}
 )
 
 
 ## Install executables and/or libraries
-install(TARGETS multimap_server multimap_server_image_loader
+install(TARGETS multimap_server multimap_server_image_loader online_map_saver
   ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
   LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
   RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION})
