--- a/package.xml
+++ b/package.xml
@@ -1,12 +1,12 @@
 <package>
   <name>multimap_server</name>
-  <version>0.1.0</version>
+  <version>0.2.0</version>
   <description>The multimap_server package, based on the code of the map_server package at http://wiki.ros.org/map_server</description>
-
+  
+  <author email="avillena@robotnik.es" >Álvaro Villena</author>
   <author>Brian Gerkey, Tony Pratkanis</author>
-  <author>contradict@gmail.com</author>
-  <author>Álvaro Villena</author>
   <maintainer email="avillena@robotnik.es">Álvaro Villena</maintainer>
+  <maintainer email="rnavarro@robotnik.es">Román Navarro</maintainer>
   <license>BSD</license>
 
   <buildtool_depend>catkin</buildtool_depend>
